2006-06-17  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (ba.game, aging.prefatt.game) : added
	zero.appeal argument
	* interfaces/R/src/rinterface.c (R_igraph_nonlinear_barabasi_game)
	(R_igraph_recent_degree_game, R_igraph_barabasi_aging_game)
	(R_igraph_recent_degree_aging_game) : added zero appeal argument

2006-06-12  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/src/rinterface.c (R_igraph_array3_to_SEXP)
	(R_igraph_SEXP_to_array3, R_igraph_SEXP_to_array3_copy) : added

	* interfaces/R/igraph/R/measure.dynamics.R
	(measure.dynamics.citedcat.id.age) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_measure_dynamics_citedcat_id_age)
	(R_igraph_measure_dynamics_citedcat_id_age_st) : added

	* interfaces/R/igraph/R/measure.dynamics.R 
	(measure.dynamics.citingcat.id.age) : added
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_citingcat_id_age)
	(R_igraph_measure_dynamics_citingcat_id_age_st) : added
	
2006-06-03  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten
	to call new C function
	* interfaces/R/src/rinterface.c (R_igraph_barabasi_aging_game) : added

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.idage) : 
	added time.window argument
	* interfaces/R/src/rinterface.c	(R_igraph_measure_dynamics_idage)
	(R_igraph_measure_dynamics_idage_st) : added time_window argument

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : added
	time.window argument
	* interfaces/R/src/rinterface.c
	(R_igraph_recent_degree_aging_game) : added
	
2006-05-29  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/par.R (igraph.par) : slightly different
	return values	
	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	(layout.fruchterman.reingold.grid, layout.kamada.kawai)
	(layout.merge) : updated verbose argument
	* interfaces/R/igraph/R/package.R (.onLoad) : added default parameters
	* interfaces/R/igraph/R/print.R (print.igraph) : updated attribute