@@ -1,3 +1,14 @@
+2006-06-24  Gabor Csardi  <csardi@localdomain>
+
+	* interfaces/R/igraph/R/plot.common.R (i.get.vertex.frame.color) : 
+	added
+	* interfaces/R/igraph/R/plot.R (plot.igraph) : vertex.frame.color
+	argument added
+	* interfaces/R/igraph/R/tkplot.R (tkplot) : vertex.frame.color
+	argument added
+	(.tkplot.create.vertex) : vertex.frame.color handling added
+	(.tkplot.deselect.vertex) : vertex.frame.color handling added
+
 2006-06-17  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/igraph/R/games.R (ba.game, aging.prefatt.game) : added
